--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "chat-app": "file:..",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -25,5 +24,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
